spanner notes